--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="empty.cs" />
     <Compile Include="IStageOpdrachtenRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="repo.cs" />
